file(GLOB sources_list LIST_DIRECTORIES true children ${CMAKE_CURRENT_SOURCE_DIR}/*)
foreach(dir ${sources_list})
    IF(IS_DIRECTORY ${dir})
        # add_subdirectory(${dir})
    ELSE()
        CONTINUE()
    ENDIF()
endforeach()

foreach (day_num RANGE 01 25)
    set(day_str ${day_num})
    if (${day_num} LESS 10)
        set(day_str "0${day_num}")
    endif ()

    if(NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/day${day_str})
        file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/day${day_str})
    endif()

    if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/day${day_str}/main.cpp)
    else()
        file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp.template/ DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/day${day_str}/main.cpp)
    endif()
endforeach()